# logik

./: .dockerignore  .gitignore  README.md  amplify.yml  logik.code-workspace
src/backend/: .dockerignore  .gitignore  Dockerfile  Pulumi.yaml  Taskfile.yml  __main__.py  docker-compose.yml  pyproject.toml
src/backend/api/: app.py  common_factories.py  lambda_function.py  legacy.py  permissions.py  scalars.py  settings.py
src/backend/api/modules/auth/: factories.py  graphql_types.py  models.py  mutations.py
src/backend/api/modules/bee_v2/: factories.py  graphql_types.py  models.py  mutations.py  queries.py
src/backend/api/modules/dictionary_manager/: factories.py  graphql_types.py  models.py  mutations.py  queries.py  sample-content-types.json
src/backend/api/modules/flow_manager/: graphql_types.py  mutations.py  providers.py  queries.py
src/backend/api/modules/function_manager/: factories.py  graphql_types.py  queries.py
src/backend/api/schemas/: customer_portal.py  integrator_center.py
src/backend/api/templates/: graphql-playground.html  graphql-voyager.html
src/backend/events/: article.json  login.json  playground.json
src/backend/infrastructure/: amplify.py  api.py  common.py  repository.py
src/backend/infrastructure/components/: container_function.py  serverless_api.py
src/backend/infrastructure/database/: aurora.py
src/backend/infrastructure/dns/: certificate.py  zone.py
src/backend/infrastructure/stacks/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml
src/backend/infrastructure/storage/: bucket.py  ftp.py
(+45 files in other folders)
